# Briscola_Scoperta

./: CMakeLists.txt  README.md
include/: card.hpp  game.hpp  player.hpp  table.hpp  utils.hpp
src/: card.cpp  game.cpp  main.cpp  player.cpp  table.cpp
